# cpp-function-register-framework

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FunctionRegisterFrameworkConfig.cmake.in  LICENSE  build.sh  function_group.h  function_registry.h  main.cpp  template_functions.cpp  utility_functions.cpp
docs/: BENCHMARK_RESULTS.md  CONSTRAINED_FUNCTION_REGISTRATION.md  ENHANCEMENT_GUIDE.md  INTEGRATION.md  MODULAR_ARCHITECTURE.md  MODULAR_REGISTRATION.md  MULTI_MODULE_REGISTRY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_GUIDE.md  README.md  SELF_CONTAINED_MODULES.md  SIMPLE_MODERN_API.md  USAGE.md
examples/: CMakeLists.txt  constrained_function_demo.cpp  constrained_math_module.cpp  database_function_group.cpp  enhanced_demo.cpp  function_groups.h  math_function_group.cpp  math_functions.cpp  modern_demo.cpp  modular_demo.cpp  modular_framework_demo.cpp  multi_module_demo.cpp  multi_module_math_basic.cpp  multi_module_math_debug.cpp  multi_module_math_optimized.cpp  performance_benchmark.cpp  performance_comparison.cpp  performance_demo.cpp  simple_example.cpp  simple_modern_demo.cpp  standard_function_demo.cpp  standard_math_module.cpp  standard_string_module.cpp  standard_utility_module.cpp  string_function_group.cpp  string_functions.cpp  utility_function_group.cpp
include/: constrained_function_group.h  enhanced_function_group.h  enhanced_function_group_cpp98.h  function_registry.h  modern_function_group.h  multi_module_registry.h  optimized_function_group.h  simple_modern_function_group.h  standard_function_registry.h
misc/: compile_time_strings.cpp  test_sfinae.cpp
modules/: CMakeLists.txt
modules/constrained/: CMakeLists.txt  constrained_function_group.cpp  constrained_function_group.h  constrained_math_functions.cpp  constrained_math_functions.h  constrained_string_functions.cpp  constrained_string_functions.h  constrained_utility_functions.cpp  constrained_utility_functions.h
modules/legacy/: CMakeLists.txt  legacy_demo.cpp  legacy_function_group.cpp  legacy_function_group.h  legacy_init.cpp  legacy_init.h  legacy_math.cpp  legacy_math_functions.h  legacy_registry.cpp  legacy_registry.h  legacy_string.cpp  legacy_string_functions.h  legacy_utility.cpp  legacy_utility_functions.h
modules/modern/: CMakeLists.txt  modern_demo.cpp  modern_function_group.cpp  modern_function_group.h  modern_math.cpp  modern_math_functions.h  modern_registry.cpp  modern_registry.h  modern_string.cpp  modern_string_functions.h  modern_utility.cpp  modern_utility_functions.h
modules/multi_module/: CMakeLists.txt  multi_module_registry.cpp  multi_module_registry.h
modules/optimized/: CMakeLists.txt  optimized_demo.cpp  optimized_function_group.cpp  optimized_function_group.h  optimized_math.cpp  optimized_math_functions.cpp  optimized_math_functions.h  optimized_registry.cpp  optimized_registry.h  optimized_string.cpp  optimized_string_functions.cpp  optimized_string_functions.h  optimized_utility.cpp  optimized_utility_functions.cpp  optimized_utility_functions.h
modules/standard/: CMakeLists.txt  standard_demo.cpp  standard_functions.cpp
src/: CMakeLists.txt  function_group.cpp  function_registry.cpp
